source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
/*
 * Demyo: Layout
 */

#header-quick-links {
	.mdl-button--icon {
		margin-right: 0.75em;
	}
	a:hover {
		color: inherit;
	}
}

#header-quick-tasks {
	margin-left: 0.75em;
}

#header-quick-links, #header-quicksearch {
	.dico {
		vertical-align: middle;
	}
}

#menu-quicksearch {
	padding: 0 16px;
	
	.mdl-textfield__input {
		display: inline;
		width: auto;
		max-width: 170px;
	}
	.dico {
		font-size: 1.4em;
		vertical-align: middle;
	}
}

/* Override to have a menu a bit larger */
@media (min-width: 350px) {
	.mdl-layout__drawer {
		width: 320px;
		transform: translateX(-330px);
	}
}

#main-menu .mdl-navigation__link, .mdl-menu a {
	&:hover {
		color: @color-text;
		text-decoration: none;
	}
	
	> .dico, > .dico-stack {
		font-size: 200%;
		vertical-align: bottom;
		margin-right: 0.25em;
	}
}

.mdl-menu a > .dico {
	/* Special override for quick tasks: align single to the middle */
	vertical-align: middle;
}

.dem-app-menu {
	&__title {
		padding: 16px 20px;
		
		&[data-dem-collapses] {
			cursor: pointer;
			
			&:hover {
				background: #e0e0e0;
			}
			
			&::before {
				.mix-dico();
				font-size: 200%;
				content: @dico-arrow_down;
				float: right;
				transition: 0.3s;
			}
			&.dem-collapsed::before {
				transform: rotate(-180deg);	
			}
		}
	}
}

#page-content, #quickSearch-results {
	padding: 0.5em;
}

/* Override to flush the footer */
main.mdl-layout__content {
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	
	#page-content, #quickSearch-results {
		flex: 1;
	}
	
	footer.mdl-mini-footer {
		flex-shrink: 0;
	}
}

/* Override to make sure logos don't get in the way */
.mdl-mini-footer {
	clear: both;
}

.dem-fabs {
	position: fixed;
	bottom: 16px;
	right: 32px;
	z-index: 4; /* Must remain below the MDL obfuscator, to be hidden by the menu when it is active */
	display: block;
	max-width: 60px;
	text-align: right;
	&__button {
		margin-top: 1em;
		display: block;
		.dico { // Copied from MDL
			position: absolute;
		    top: 50%;
		    left: 50%;
	        transform: translate(-12px, -12px);
		    line-height: 24px;
		    width: 24px;
		}
	}
}

#dem-paging {
	text-align: center;
	margin-top: 1em;
	.dico {
		font-size: 200%;
		vertical-align: middle;
	}
}

/* Override to have a readable header */
.mdl-layout-title {
	max-width: 80%;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: pre;
	line-height: 1.1em;
}

.dem-columnized {
	padding: 16px;
	column-gap: 16px;
}

@media screen and (min-width: @tablet-breakpoint-inclusive) {
	.dem-columnized--2-cols {
		column-count: 2;
	}
}

#widget-search {
	position: relative; /* For progress indicator */
}

